Core/backend/articles (#14)
* added createArticle and getArticles and deleteArticle and tests

* added update Article and tests
