# backend/src/main/java/io/github/ctrl_alt_elite/hackathon/controllers/ArticlesApi.java
@@ -1,0 +1,333 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.8.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package io.github.ctrl_alt_elite.hackathon.controllers;
+
+import io.github.ctrl_alt_elite.hackathon.dto.ArticleDTO;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-11-16T18:01:06.658883+03:00[Europe/Moscow]", comments = "Generator version: 7.8.0")
+@Validated
+@Tag(name = "Articles", description = "Tag for operations with articles")
+public interface ArticlesApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /v1/articles/new : Creates new article
+     *
+     * @param articleDTO  (required)
+     * @return article created! (status code 201)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     */
+    @Operation(
+        operationId = "createArticle",
+        summary = "Creates new article",
+        tags = { "Articles" },
+        responses = {
+            @ApiResponse(responseCode = "201", description = "article created!"),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.POST,
+        value = "/v1/articles/new",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    default ResponseEntity<Void> createArticle(
+        @Parameter(name = "ArticleDTO", description = "", required = true) @Valid @RequestBody ArticleDTO articleDTO
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * DELETE /v1/articles/{id} : delete chosen Article
+     *
+     * @param id  (required)
+     * @return Article deleted successefully (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or You are not author of this article (status code 403)
+     *         or Article with this id not found (status code 404)
+     */
+    @Operation(
+        operationId = "deleteArticle",
+        summary = "delete chosen Article",
+        tags = { "Articles" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Article deleted successefully"),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "You are not author of this article"),
+            @ApiResponse(responseCode = "404", description = "Article with this id not found")
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.DELETE,
+        value = "/v1/articles/{id}",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<Void> deleteArticle(
+        @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /v1/articles/my : Return yours articles
+     *
+     * @return Articles which yoy authored (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     */
+    @Operation(
+        operationId = "getArticles",
+        summary = "Return yours articles",
+        tags = { "Articles" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Articles which yoy authored", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = ArticleDTO.class)))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/v1/articles/my",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<List<ArticleDTO>> getArticles(
+        
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "[ { \"author\" : \"0x35686896756\", \"id\" : \"1\", \"text\" : \"Lorem impsum\", \"title\" : \"article1\", \"tags\" : [ \"IT\", \"IT\" ] }, { \"author\" : \"0x35686896756\", \"id\" : \"1\", \"text\" : \"Lorem impsum\", \"title\" : \"article1\", \"tags\" : [ \"IT\", \"IT\" ] } ]";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /v1/articles/search/{phrase} : Search relevant Articles
+     *
+     * @param phrase  (required)
+     * @return Articles relevant to your phrase (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     */
+    @Operation(
+        operationId = "searchArticles",
+        summary = "Search relevant Articles",
+        tags = { "Articles" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Articles relevant to your phrase", content = {
+                @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = ArticleDTO.class)))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/v1/articles/search/{phrase}",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<List<ArticleDTO>> searchArticles(
+        @Parameter(name = "phrase", description = "", required = true, in = ParameterIn.PATH) @PathVariable("phrase") String phrase
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "[ { \"author\" : \"0x35686896756\", \"id\" : \"1\", \"text\" : \"Lorem impsum\", \"title\" : \"article1\", \"tags\" : [ \"IT\", \"IT\" ] }, { \"author\" : \"0x35686896756\", \"id\" : \"1\", \"text\" : \"Lorem impsum\", \"title\" : \"article1\", \"tags\" : [ \"IT\", \"IT\" ] } ]";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * PUT /v1/articles/{id} : Update chosen Article
+     *
+     * @param id  (required)
+     * @param articleDTO  (required)
+     * @return Article updated successefully (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or You are not author of this article (status code 403)
+     *         or Article with this id not found (status code 404)
+     */
+    @Operation(
+        operationId = "updateArticle",
+        summary = "Update chosen Article",
+        tags = { "Articles" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Article updated successefully"),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "You are not author of this article"),
+            @ApiResponse(responseCode = "404", description = "Article with this id not found")
+        },
+        security = {
+            @SecurityRequirement(name = "bearerAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.PUT,
+        value = "/v1/articles/{id}",
+        produces = { "application/json" },
+        consumes = { "application/json" }
+    )
+    
+    default ResponseEntity<Void> updateArticle(
+        @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
+        @Parameter(name = "ArticleDTO", description = "", required = true) @Valid @RequestBody ArticleDTO articleDTO
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"invalid body\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
